2002-11-23  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el (LilyPond-autocompletion): invoked with
	[S-iso-lefttab], fixes at bol and eol, descriptive variable names.

	* lilypond-words: add two (Everybody can add/remove words now!).

2002-11-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/ly2dvi.py: Add paper sizes.

	* lily/timing-engraver.cc: 
	* lily/time-signature.cc: 
	* lily/span-bar.cc: 
	* lily/grob-scheme.cc: Code formatting fixes.

	* scm/sodipodi.scm: 
	* scm/sketch.scm:
	* buildscripts/mf-to-table.py: 
	* buildscripts/make-font-dir.py: Font testing.

2002-11-23  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el (LilyPond-autocompletion): deletes end-of-word,
	inserts try-completion and shows all-completions.

	* lilypond.words: '\' -> '\\'

	* lilypond-mode.el: load libraries in the end, lilypond.words defines
	LilyPond-keywords, LilyPond-identifiers and LilyPond-reserved-words.
	
	* lilypond-font-lock.el: Use LilyPond-keywords, LilyPond-identifiers
	and LilyPond-reserved-words.
	
2002-11-22  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el (LilyPond-words-filename): find lilypond.words
	from load-path.
	
	* lilypond-mode.el (LilyPond-autocompletion): shows completions in
	the mini-buffer with Control-Shift-c.
	
2002-11-21  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parser.yy (tempo_event): use tempo-unit for \tempo
	duration. This fixes \tempo taking time.

2002-11-21  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* lily/volta-engraver.cc (process_acknowledged_grobs): 
	Allow for text markup in repeatCommands. 

2002-11-21  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el (LilyPond-insert-string): new function, use it
	in LilyPond-insert-tag-notes. LilyPond-insert-between, new function.
	Get rid of skeleton.el-dependency.

	* Documentation/topdocs/INSTALL.texi: tell how to get syntax-highlight.

2002-11-20  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/beam-engraver.cc (stop_translation_timestep): reset now_stop_ev_
