@@ -129,7 +129,7 @@ binary-arch: build install
 	dh_testdir
 	dh_testroot
 	cp -av lilypond-mode.el lilypond-font-lock.el lilypond-indent.el \
-		$(r)/usr/share/emacs/site-lisp/
+		lilypond.words $(r)/usr/share/emacs/site-lisp/
 	dh_installdocs DEDICATION NEWS ROADMAP *.txt
 
 #	dh_installdocs DEDICATION NEWS ROADMAP *.txt \
