@@ -3,7 +3,14 @@
 	* lilypond-mode.el (LilyPond-autocompletion): invoked with
 	[S-iso-lefttab], fixes at bol and eol, descriptive variable names.
 
-	* lilypond-words: add two (Everybody can add/remove words now!).
+	* lilypond.words: add two (Everybody can add/remove words now!).
+
+	* debian/rules:
+	* make/lilypond.suse.spec.in:
+	* make/lilypond.mandrake.spec.in:
+	* make/lilypond.redhat.spec.in: Add lilypond.words for emacs-files.
+
+	* Documentation/user/refran.itely: Mention autocompletion.
 
 2002-11-23  Jan Nieuwenhuizen  <janneke@gnu.org>
 
